# splashpaper

./: .gitignore  README.md  pyproject.toml  setup.py  splashpaper  splashpaper.py  wallpaper.py
