[tool.poetry]
name = "splashpaper"
version = "1.3.4"
description = "Wallpaper manager with unsplash.com integration"
authors = ["Dmitry Gritsenko <splashpaper@evtn.ru>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/evtn/splashpaper"
homepage = "https://github.com/evtn/splashpaper"

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
